# dc-data-baker

./: .gitignore  .pre-commit-config.yaml  README.md  make_graph.py  package-lock.json  package.json  pyproject.toml  renovate.json5  validate.py
.github/: dependabot.yml
.github/actions/cdk-deploy/: action.yml
.github/actions/cdk-synth/: action.yml
.github/actions/install/: action.yml
.github/actions/node-setup/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build-and-test.yml  cdk-deploy.yml  cdk-synth.yml  development.yml  production.yml
cdk/: app.py
cdk/lambdas/partition-addressbase-by-first-letter/: handler.py  requirements.txt
cdk/layers/: buckets.py  databases.py  models.py  tables.py
cdk/queries/: addresses_to_boundary_change.sql  current-boundary-changes-to-addressbase.sql  current-boundary-reviews-to-addressbase.sql  partition-addressbase-cleaned.sql  uprn-to-ballots-first-letter.sql
cdk/shared_components/: buckets.py  databases.py  models.py  tables.py
cdk/shared_components/constructs/: addressbase_data_quality_check_construct.py  addressbase_source_check_construct.py  delete_stale_outcodes_construct.py  guarded_step_function_construct.py  make_partitions_construct.py  row_count_check_construct.py  (+3 more)
cdk/stacks/: addressbase.py  base_stack.py  current_boundary_changes.py  current_elections.py  data_baker.py  data_baker_core.py
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: cdk-deploy  cdk-synth  cdk-synth.sh  check-state-machines-run.py  code-check.sh
(+12 files in other folders)
