[project]
name = "DC-Data-Baker"
version = "0.0.0"
description = "Manage 'layers' of data that can be used as scalable read-only backends"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aws-cdk-aws-glue-alpha==2.178.1a0",
    "aws_cdk.aws_lambda_python_alpha==2.178.1a0",
    "aws-cdk-lib==2.178.1",
    "graphviz==0.20.3",
    "sqlglot==26.4.1",
    "boto3>=1.36.18",
    "aws-cdk-aws-pipes-alpha>=2.178.1a0",
    "aws-cdk-aws-pipes-sources-alpha>=2.178.1a0",
    "aws-cdk-aws-pipes-targets-alpha>=2.178.1a0",
]

[dependency-groups]
dev = [
    "pre-commit==4.1.0",
    "ruff==0.9.5",
    "yamllint>=1.37.0",
]

[tool.uv]
required-version = "<0.6.0"


[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]
